# infobox

./: .env.example  .gitignore  .vercelignore  DEPLOIEMENT.md  README.md  app.py  env.vercel  pyproject.toml  requirements.txt  test_parser.py  vercel.json
api/: index.py
fixtures/: boxrec_live_sample.html  list_manager_grenada.html  list_manager_human_container.html  list_manager_p0.html  profile_manager.html  profile_manager_cf.html  profile_manager_flag.html  profile_manager_live.html  profile_manager_roberto.html
infobox/: __init__.py  config.py  security.py
scraper/: __init__.py  boxrec_client.py  boxrec_countries.py  enrich.py  export_utils.py  http_session.py  parser.py  settings_store.py
scripts/: add_boxeurs_manual.py  add_promoters_manual.py  apply_boxeurs_migration.py  apply_migration_supabase.py  apply_promoteurs_migration.py  collect_promoters_web_search.py  consolidate_futurebd_managers.py  contact_validation.py  enrich_promoters_web.py  enrich_sans_contact.py  enrich_to_md.py  finish_promoters_sync.py  fix_bad_manager_enrichment.py  fix_bad_promoter_enrichment.py  phone_country.py  run_promoters_pipeline.py  scrape_promoters_boxrec.py  sync_boxeurs_supabase.py  sync_managers_supabase.py  sync_promoteurs_supabase.py
static/: assistant.html  favori-mauvais.html  robots.txt
static/css/: assistant.css  base.css
static/js/: accueil.js  assistant.js  bookmarklet.js  collecte.js  common.js  configuration.js  manuel.js  pdf-utils.js  resultats.js
supabase/migrations/: 001_boxing_center.sql  002_app_users.sql  003_app_users_phone.sql  006_boxeurs.sql  (+8 more)
