[project]
name = "infobox"
version = "1.0.0"
description = "InfoBox — extraction contacts BoxRec"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "cloudscraper>=1.2.71",
    "curl_cffi>=0.7.0",
    "reportlab>=4.0.0",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=6.0.0",
]

[tool.vercel]
entrypoint = "app:app"
